Resolves: tdf#128716 make gtk assistant steps clickable

Change-Id: I28d7cfd2192f22410eee08c6f4e5ab056789fcfd